# ha-neon-billing

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml
custom_components/neon_billing/: __init__.py  api.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  pricing.py  sensor.py  strings.json
custom_components/neon_billing/translations/: en.json
docs/: INSTALL.md
docs/superpowers/plans/: 2026-06-16-neon-billing-integration.md
docs/superpowers/specs/: 2026-06-16-neon-billing-integration-design.md
tests/: conftest.py  test_api.py  test_config_flow.py  test_coordinator.py  test_init.py  test_pricing.py
tests/fixtures/: branch_consumption.json  consumption_history_account.json  project_branches.json  projects.json  spending_limit.json  users_me.json  users_me_orgs.json
